<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">EngineeringMode</string>
    <string name="close">关闭</string>
    <string name="dl_title_lock">安全提示</string>
    <string name="dl_title_lock_content">请先进行安全解锁！</string>
    <string name="exit_t">Exit Diagnostics</string>
    <string name="radio_am">AM</string>
    <string name="radio_fm">FM</string>
    <string name="radio_left">◁</string>
    <string name="radio_null">--</string>
    <string name="radio_right">▷</string>
    <string name="radio_signal_strength">current strength: %1$sdBuv</string>
    <string name="radio_strong_weak">SignalStrength :</string>
    <string name="return_t">return</string>
    <string name="rgb_content">(Touch colors below)</string>
    <string name="rgb_title">RGB Pixel Test.</string>
    <string name="search_menu_title">Search</string>
    <string name="sensor_latitude">Latitude:</string>
    <string name="sensor_longitude">Longitude:</string>
    <string name="sensor_satellite_detected">No satellite detected</string>
    <string name="sensor_time">Time:</string>
    <string name="sensor_x">X:</string>
    <string name="sensor_y">Y:</string>
    <string name="sensor_z">Z:</string>
    <string name="software_4g_version">4G Version:</string>
    <string name="software_android">Android Version:</string>
    <string name="software_apk">Apk Version:</string>
    <string name="software_boot0">Boot0 Version:</string>
    <string name="software_boot1">Boot1 Version:</string>
    <string name="software_car_fd02">AUH_CAL_FD02:</string>
    <string name="software_iccid">ICCID:</string>
    <string name="software_kernel">Kernel Version:</string>
    <string name="software_mcu">MCU Version:</string>
    <string name="software_model">Model:</string>
    <string name="software_os_version">OS Version Number:</string>
    <string name="software_screen">Screen Version:</string>
    <string name="software_tcu_esn">TCU ESN:</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="text_down">∇</string>
    <string name="text_up">∆</string>
    <string name="title_adc_test_mode">Bezel Diagnostics/AHU/Adc</string>
    <string name="title_bd">Bezel Diagnostics</string>
    <string name="title_bd_ahu">Bezel Diagnostics/AHU</string>
    <string name="title_bd_ahu_config">Bezel Diagnostics/AHU/Configuration Status</string>
    <string name="title_bd_ahu_pn">Bezel Diagnostics/AHU/AHU Part Numbers</string>
    <string name="title_bd_apim_li">Bezel Diagnostics/AHU/Location Information</string>
    <string name="title_bd_apim_pn">Bezel Diagnostics/AHU/AHU Part Numbers</string>
    <string name="title_bd_apim_rgb">Bezel Diagnostics/AHU/RGB Pixel Test</string>
    <string name="title_bd_dsp">Bezel Diagnostics/DSP</string>
    <string name="title_bd_dsp_pn">Bezel Diagnostics/DSP/Part Numbers</string>
    <string name="title_bd_sdm">Bezel Diagnostics/SDM</string>
    <string name="title_bd_sdm_pn">Bezel Diagnostics/SDM/Part Numbers</string>
    <string name="title_bd_software_v">Bezel Diagnostics/AHU/Software Versions</string>
    <string name="title_bd_swt">Speaker Walk-Around Test Active</string>
    <string name="title_bd_wifi_set">Bezel Diagnostics/AHU/Wifi Settings</string>
    <string name="title_bt_test_mode">Bezel Diagnostics/AHU/BT test mode</string>
    <string name="title_em">工程模式</string>
    <string name="title_gyroscope">Bezel Diagnostics/AHU/Gyroscope</string>
    <string name="title_pss">Bezel Diagnostics/AHU/4G Signal Strengths</string>
    <string name="title_radio">Bezel Diagnostics/AHU/Tuner Reception</string>
    <string name="title_radio_signal">Bezel Diagnostics/AHU/Radio Signal Strength</string>
    <string name="title_sdtest">Bezel Diagnostics/AHU/Screen Diagnosis</string>
    <string name="title_sensor">Bezel Diagnostics/AHU/Sensor</string>
    <string name="title_wifid">Bezel Diagnostics/AHU/Wifi Debug</string>
    <string name="touch_screen_content_d">Press the bottom left to exit the test.</string>
    <string name="touch_screen_content_u">Touch the screen to begin test.</string>
    <string name="touch_screen_title">Touchscreen Activation Test</string>
    <string name="tuner_agc">Agc :</string>
    <string name="tuner_band_width">BindWidth :</string>
    <string name="tuner_bt_reset">Reset</string>
    <string name="tuner_bt_update">Update</string>
    <string name="tuner_fm">FM</string>
    <string name="tuner_ifbw">IFBW :</string>
    <string name="tuner_modulation">Modulation :</string>
    <string name="tuner_off">OFF</string>
    <string name="tuner_offset">OffSet :</string>
    <string name="tuner_on">ON</string>
    <string name="tuner_pd_status">PD Stauts :</string>
    <string name="tuner_quality">Quality :</string>
    <string name="tuner_s_s">SignalStrength :</string>
    <string name="tuner_stereo">Stereo :</string>
    <string name="tuner_usn">USN :</string>
    <string name="tuner_wam">Wam :</string>
    <string name="wifi_band">Wifi band :</string>
    <string name="wifi_band_set">Wifi band settings:</string>
    <string name="wifi_band_set_24">2.4GHz</string>
    <string name="wifi_band_set_50">5.0GHz</string>
    <string name="wifi_channel">Wifi channel :</string>
    <string name="wifi_channel_et">Please enter the number 1-13</string>
    <string name="wifi_channel_set">Wifi channel settings :</string>
    <string name="wifi_debug">Wifi Debug</string>
    <string name="wifi_ip">IP:</string>
    <string name="wifi_mac_add">Wifi mac address :</string>
    <string name="wifi_mode_set">Wifi test mode settings:</string>
    <string name="wifi_mode_set_off">Off</string>
    <string name="wifi_mode_set_on">ON</string>
    <string name="wifi_module_version">Wifi module version :</string>
    <string name="wifi_name">Wifi name :</string>
    <string name="wifi_send">send</string>
    <string name="wifi_signal_strength">Wifi signal strength :</string>
    <string name="wifi_test_mode">Wifi test mode :</string>
    <string name="wifi_work_et">Please enter the number 1-4</string>
    <string name="wifi_work_mode">Wifi Working Mode :</string>
    <string name="wifi_work_mode_set">Wifi Working settings :</string>
</resources>
