<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/wifi_margin_10">
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/broder_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/wifi_margin_10">
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_module_version"/>
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/tv_wifi_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wifi_margin_10"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/broder_white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/wifi_margin_10">
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_name"/>
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/tv_wifi_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wifi_margin_10"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/broder_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/wifi_margin_10">
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_mode_set"/>
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/bt_wifi_on" android:background="@drawable/broder_change_style" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wifi_margin_50" android:text="@string/wifi_mode_set_on"/>
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/bt_wifi_off" android:background="@drawable/broder_change_style" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wifi_margin_50" android:text="@string/wifi_mode_set_off"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/broder_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/wifi_margin_10">
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_test_mode"/>
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/tv_wifi_test_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wifi_margin_50"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/broder_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/wifi_margin_10">
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_band_set"/>
                <TextView android:textSize="@dimen/wifi_text_size_30" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/bt_wifi_band_24" android:background="@drawable/broder_change_style" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wifi_margin_50" android:text="@string/wifi_band_set_24"/>
                <TextView android:textSize="@dimen/wifi_text_size_30" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/bt_wifi_band_50" android:background="@drawable/broder_change_style" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wifi_margin_50" android:text="@string/wifi_band_set_50"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/broder_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/wifi_margin_10">
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_band"/>
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/tv_wifi_band" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wifi_margin_50"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/broder_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/wifi_margin_10">
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_channel_set"/>
                <EditText android:textSize="@dimen/wifi_text_size_30" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/et_wifi_channel_set" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/wifi_channel_et" android:inputType="number"/>
                <TextView android:textSize="@dimen/wifi_text_size_30" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/bt_wifi_channel_set" android:background="@drawable/broder_change_style" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_send"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/broder_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/wifi_margin_10">
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_channel"/>
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/tv_wifi_channel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wifi_margin_50"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/broder_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/wifi_margin_10">
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_work_mode_set"/>
                <EditText android:textSize="@dimen/wifi_text_size_30" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/et_wifi_work_set" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/wifi_work_et" android:inputType="number"/>
                <TextView android:textSize="@dimen/wifi_text_size_30" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/bt_wifi_work_set" android:background="@drawable/broder_change_style" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_send"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/broder_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/wifi_margin_10">
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_work_mode"/>
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/tv_wifi_working_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wifi_margin_50"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/broder_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/wifi_margin_10">
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_signal_strength"/>
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/tv_wifi_signal_strength" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wifi_margin_50"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/broder_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/wifi_margin_10" android:layout_marginBottom="@dimen/wifi_margin_50">
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_mac_add"/>
                <TextView android:textSize="@dimen/wifi_text_size" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/tv_wifi_mac_address" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wifi_margin_50"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
